# artifact-readiness-engine

./: README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: API.md  CHANGELOG.md  EU_AI_ACT_MAPPING.md  EVIDENCE_MODEL.md  REVIEWER_GUIDE.md  ROADMAP.md  common-proof-failures.md  eu-ai-act-inspection-map.md  proof-structure-inspection-model.md  report-template.md
examples/: manifest.json
examples/fail/: overbroad-claim.json
examples/hold/: missing-receipt.json  missing-replay.json
examples/pass/: minimal-refusal-receipt.json
examples/reports/: fail-overbroad-claim.report.json  hold-missing-receipt.report.json  pass-minimal-refusal-receipt.report.json
schemas/: proof-pack.schema.json
scripts/: generate_reports.py
src/artifact_readiness_engine/: __init__.py  cli.py  digest.py  inspector.py  manifest.py  model.py  report.py  scoring.py  validation.py  validator.py
tests/: test_fail_overbroad_claim.py  test_golden_reports.py  test_hold_missing_receipt.py  test_pass_minimal_refusal_receipt.py  test_public_api.py  test_report_digests.py  test_verify_report_cli.py
